<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/header_toolbar" />

    <vn.nsn.app.iotp.view.RegularTextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/setting_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tutorial_profile_32"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/label">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/sw_biometric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <vn.nsn.app.iotp.view.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biometrics"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent">

            <Switch
                android:id="@+id/sw_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <vn.nsn.app.iotp.view.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textColor="@color/black" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <vn.nsn.app.iotp.view.RegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:text="@string/setting_tip"
        app:layout_constraintTop_toBottomOf="@id/sw_layout" />
</android.support.constraint.ConstraintLayout>