<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/header_toolbar"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.CardView
        android:id="@+id/cstr_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <vn.nsn.app.iotp.view.RegularTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_information"
                android:textColor="@color/greenDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/ln_trans_id"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_16">

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_trans_id"
                    style="@style/textViewOtpAdvance"
                    android:text="@string/transaction_id"
                    android:textColor="@color/black" />

                <vn.nsn.app.iotp.view.RegularTextView

                    android:id="@+id/tv_trans_id_value"
                    style="@style/textViewValueOtpAdvance"
                    tools:text="876453235"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_from"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_from_account"
                    style="@style/textViewOtpAdvance"
                    android:text="@string/from_account"
                    android:textColor="@color/black" />

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_from_account_value"

                    style="@style/textViewValueOtpAdvance"
                    tools:text="8764532345667775"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_to_account"
                    style="@style/textViewOtpAdvance"
                    android:text="@string/to_account"
                    android:textColor="@color/black" />

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_to_account_value"
                    style="@style/textViewValueOtpAdvance"
                    tools:text="8764532333432545"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_money"
                    style="@style/textViewOtpAdvance"
                    android:text="@string/amount"
                    android:textColor="@color/black" />

                <LinearLayout

                    style="@style/textViewValueOtpAdvance">

                    <vn.nsn.app.iotp.view.RegularTextView
                        android:id="@+id/tv_money_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="50.000.000"
                        android:textColor="@color/colorOrange"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <vn.nsn.app.iotp.view.RegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="VNĐ"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <vn.nsn.app.iotp.view.RegularTextView
                    android:id="@+id/tv_time"
                    style="@style/textViewOtpAdvance"
                    android:text="@string/transaction_time"
                    android:textColor="@color/black" />

                <vn.nsn.app.iotp.view.RegularTextView

                    android:id="@+id/tv_time_value"
                    style="@style/textViewValueOtpAdvance"
                    android:text="17/11/2018 - 09:12:20"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <vn.nsn.app.iotp.view.RegularTextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="32dp"
        android:layout_marginRight="@dimen/margin_16"
        android:background="@drawable/btn_pressed_radius_green"
        android:gravity="center"
        android:paddingTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/approve"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cstr_content" />

    <vn.nsn.app.iotp.view.RegularTextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/margin_16"
        android:background="@drawable/btn_radius_press"
        android:gravity="center"
        android:paddingTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_submit" />


</android.support.constraint.ConstraintLayout>