<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/header_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ok"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.v7.widget.CardView
            android:id="@+id/cstr_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/cstr_otp"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <vn.nsn.app.ocb.view.RegularTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/transaction_information"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ln_trans_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/margin_16">

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_trans_id"
                        style="@style/textViewOtpAdvance"
                        android:text="@string/transaction_id"
                        android:textColor="@color/black" />

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_trans_id_value"

                        style="@style/textViewValueOtpAdvance"
                        android:text="876453235"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ln_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_from_account"
                        style="@style/textViewOtpAdvance"
                        android:text="@string/from_account"

                        android:textColor="@color/black" />

                    <vn.nsn.app.ocb.view.RegularTextView

                        android:id="@+id/tv_from_account_value"
                        style="@style/textViewValueOtpAdvance"
                        android:text="8764532345667775"

                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ln_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_to_account"
                        style="@style/textViewOtpAdvance"

                        android:text="@string/to_account"
                        android:textColor="@color/black" />

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_to_account_value"

                        style="@style/textViewValueOtpAdvance"
                        android:text="8764532333432545"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ln_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_money"
                        style="@style/textViewOtpAdvance"

                        android:text="@string/amount"
                        android:textColor="@color/black" />

                    <LinearLayout

                        style="@style/textViewValueOtpAdvance">

                        <vn.nsn.app.ocb.view.RegularTextView
                            android:id="@+id/tv_money_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50.000.000"
                            android:textColor="@color/colorOrange"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <vn.nsn.app.ocb.view.RegularTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="VNĐ"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_time"
                        style="@style/textViewOtpAdvance"
                        android:text="@string/transaction_time"
                        android:textColor="@color/black" />

                    <vn.nsn.app.ocb.view.RegularTextView
                        android:id="@+id/tv_time_value"
                        style="@style/textViewValueOtpAdvance"
                        android:text="17/11/2018 - 09:12:20"
                        android:textColor="@color/black" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cstr_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cstr_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16">

                <vn.nsn.app.ocb.view.RegularTextView
                    android:id="@+id/tv_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:gravity="center"
                    android:text="@string/otp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/v_devide"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@color/greenDark"
                    app:layout_constraintTop_toBottomOf="@id/tv_otp" />

                <vn.nsn.app.ocb.view.RegularTextView
                    android:id="@+id/tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:maxLines="2"
                    android:text="@string/input_otp_message"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/v_devide" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/ln_active_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_message">

                    <include
                        layout="@layout/include_otp_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edt_active_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:cursorVisible="false"
                        android:enabled="false"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8"
                        android:singleLine="true"
                        android:textColor="@color/transparent" />

                </android.support.constraint.ConstraintLayout>

                <vn.nsn.app.ocb.view.RegularTextView
                    android:id="@+id/tv_message_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:maxLines="1"
                    android:text="@string/otp_time"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/ln_active_code" />

                <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                    android:id="@+id/v_count_down"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_message_2"
                    app:progressColor="@color/greenDark"
                    app:textSize="14sp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>


    <vn.nsn.app.ocb.view.RegularTextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/btn_pressed_radius_green"
        android:gravity="center"
        android:paddingTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/complete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
